// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table List Row should be defined 1`] = `
<div>
  <div
    class="HvTableContainer-root-588"
  >
    <table
      class="HvTable-root-589 HvTable-listRow-592"
    >
      <thead
        class="HvTableHead-root-593"
      >
        <tr
          class="HvTableRow-root-595 HvTableRow-head-596 HvTableRow-variantListHead-604"
        >
          <th
            class="HvTableHeader-root-605 HvTableHeader-head-606 HvTableHeader-variantList-625"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent-613"
            >
              <div
                class="HvTableHeader-headerParagraph-615 HvTypography-root-638 HvTypography-highlightText-650"
              >
                Sample Header 0
              </div>
            </div>
          </th>
          <th
            class="HvTableHeader-root-605 HvTableHeader-head-606 HvTableHeader-variantList-625"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent-613"
            >
              <div
                class="HvTableHeader-headerParagraph-615 HvTypography-root-638 HvTypography-highlightText-650"
              >
                Sample Header 1
              </div>
            </div>
          </th>
          <th
            class="HvTableHeader-root-605 HvTableHeader-head-606 HvTableHeader-variantList-625"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent-613"
            >
              <div
                class="HvTableHeader-headerParagraph-615 HvTypography-root-638 HvTypography-highlightText-650"
              >
                Sample Header 2
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="HvTableBody-root-660"
      >
        <tr
          class="HvTableRow-root-595 HvTableRow-body-597 grid HvFocus-root-661 grid HvTableRow-variantList-603"
        >
          <td
            class="HvTableCell-root-669 HvTableCell-body-671 HvTableCell-variantList-682"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root-669 HvTableCell-body-671 HvTableCell-variantList-682"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root-669 HvTableCell-body-671 HvTableCell-variantList-682"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="HvTableRow-root-595 HvTableRow-body-597 grid HvFocus-root-661 grid HvTableRow-variantList-603"
        >
          <td
            class="HvTableCell-root-669 HvTableCell-body-671 HvTableCell-variantList-682"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root-669 HvTableCell-body-671 HvTableCell-variantList-682"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root-669 HvTableCell-body-671 HvTableCell-variantList-682"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="HvTableRow-root-595 HvTableRow-body-597 grid HvFocus-root-661 grid HvTableRow-variantList-603"
        >
          <td
            class="HvTableCell-root-669 HvTableCell-body-671 HvTableCell-variantList-682"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root-669 HvTableCell-body-671 HvTableCell-variantList-682"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root-669 HvTableCell-body-671 HvTableCell-variantList-682"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="HvTableRow-root-595 HvTableRow-body-597 grid HvFocus-root-661 grid HvTableRow-variantList-603"
        >
          <td
            class="HvTableCell-root-669 HvTableCell-body-671 HvTableCell-variantList-682"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root-669 HvTableCell-body-671 HvTableCell-variantList-682"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root-669 HvTableCell-body-671 HvTableCell-variantList-682"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="HvTableRow-root-595 HvTableRow-body-597 grid HvFocus-root-661 grid HvTableRow-variantList-603"
        >
          <td
            class="HvTableCell-root-669 HvTableCell-body-671 HvTableCell-variantList-682"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root-669 HvTableCell-body-671 HvTableCell-variantList-682"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root-669 HvTableCell-body-671 HvTableCell-variantList-682"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="HvTableRow-root-595 HvTableRow-body-597 grid HvFocus-root-661 grid HvTableRow-variantList-603"
        >
          <td
            class="HvTableCell-root-669 HvTableCell-body-671 HvTableCell-variantList-682"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root-669 HvTableCell-body-671 HvTableCell-variantList-682"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root-669 HvTableCell-body-671 HvTableCell-variantList-682"
          >
            Sample Cell 2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table Simple Table should be defined 1`] = `
<div>
  <div
    class="HvTableContainer-root-394"
  >
    <table
      class="HvTable-root-395"
    >
      <thead
        class="HvTableHead-root-399"
      >
        <tr
          class="HvTableRow-root-401 HvTableRow-head-402"
        >
          <th
            class="HvTableHeader-root-411 HvTableHeader-head-412"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent-419"
            >
              <div
                class="HvTableHeader-headerParagraph-421 HvTypography-root-444 HvTypography-highlightText-456"
              >
                Sample Header 0
              </div>
            </div>
          </th>
          <th
            class="HvTableHeader-root-411 HvTableHeader-head-412"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent-419"
            >
              <div
                class="HvTableHeader-headerParagraph-421 HvTypography-root-444 HvTypography-highlightText-456"
              >
                Sample Header 1
              </div>
            </div>
          </th>
          <th
            class="HvTableHeader-root-411 HvTableHeader-head-412"
            scope="col"
          >
            <div
              class="HvTableHeader-headerContent-419"
            >
              <div
                class="HvTableHeader-headerParagraph-421 HvTypography-root-444 HvTypography-highlightText-456"
              >
                Sample Header 2
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        class="HvTableBody-root-466"
      >
        <tr
          class="HvTableRow-root-401 HvTableRow-body-403 grid"
        >
          <td
            class="HvTableCell-root-467 HvTableCell-body-469"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root-467 HvTableCell-body-469"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root-467 HvTableCell-body-469"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="HvTableRow-root-401 HvTableRow-body-403 grid"
        >
          <td
            class="HvTableCell-root-467 HvTableCell-body-469"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root-467 HvTableCell-body-469"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root-467 HvTableCell-body-469"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="HvTableRow-root-401 HvTableRow-body-403 grid"
        >
          <td
            class="HvTableCell-root-467 HvTableCell-body-469"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root-467 HvTableCell-body-469"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root-467 HvTableCell-body-469"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="HvTableRow-root-401 HvTableRow-body-403 grid"
        >
          <td
            class="HvTableCell-root-467 HvTableCell-body-469"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root-467 HvTableCell-body-469"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root-467 HvTableCell-body-469"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="HvTableRow-root-401 HvTableRow-body-403 grid"
        >
          <td
            class="HvTableCell-root-467 HvTableCell-body-469"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root-467 HvTableCell-body-469"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root-467 HvTableCell-body-469"
          >
            Sample Cell 2
          </td>
        </tr>
        <tr
          class="HvTableRow-root-401 HvTableRow-body-403 grid"
        >
          <td
            class="HvTableCell-root-467 HvTableCell-body-469"
          >
            Sample Cell 0
          </td>
          <td
            class="HvTableCell-root-467 HvTableCell-body-469"
          >
            Sample Cell 1
          </td>
          <td
            class="HvTableCell-root-467 HvTableCell-body-469"
          >
            Sample Cell 2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
